# lakehouse-at-home

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  MACOS_CHANGES_LOG.md  MINIMAL_NEEDED_TREE.md  README.md  SECURITY.md  SETUP.md  docker-compose-airflow.yml  docker-compose-kafka.yml  docker-compose-lance-prod.yml  docker-compose-lance.yml  docker-compose-notebooks.yml  docker-compose-spark41.yml  docker-compose-unity-catalog.yml  docker-compose.yml  lakehouse  pyproject.toml  release-please-config.json
.claude/skills/: SDP.md
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml  release-please.yml
config/airflow/: setup_connections.sh
config/grafana/provisioning/dashboards/: dashboards.yml
config/lance/: alerting-rules.yml  production.env.example  spark-defaults-lance-prod.conf.example
config/prometheus/: prometheus.yml
config/spark/: spark-defaults-lance.conf.example  spark-defaults-uc.conf.example  spark-defaults.conf.example
dags/: iceberg_maintenance.py  lakehouse_medallion_pipeline.py
docker/airflow/: Dockerfile
docker/notebooks/spark41-jupyter/: Dockerfile
docs/: DEV_WORKFLOW.md  README.md  architecture.md  sdp-before-after.md  troubleshooting.md
docs/deployment/: aws.md  databricks.md  local.md
docs/design/: multimodal-lancedb-integration.md
docs/getting-started/: MACOS_SETUP_GUIDE.md  configuration.md
docs/guides/: airflow.md  cli-reference.md  multi-version.md  pipelines.md  streaming.md  unity-catalog.md
notebooks/: 00_connectivity_spark41_kafka.ipynb  01-test.ipynb  Untitled.ipynb  spark40_imperative_pipeline.ipynb  spark41_declarative_pipeline.ipynb
schemas/: README.md
scripts/: 02-transformations.py  03-streaming-basic.py  04-kafka-streaming.py  05-lance-quickstart.py  06-kafka-to-lance.py  07-spark-lance-streaming.py  08-semantic-search.py  09-image-search.py  10-hybrid-lance-iceberg.py  README.md  download-jars.sh  embeddings.py  iceberg-spark-quickstart.py  kafka-lance-producer.py  kafka-producer.py  lance_manager.py  lance_monitoring.py  multimodal_search.py  pipeline_spark40.py  run-spark-test.sh  test-iceberg.scala  test-lance.py  test-spark-versions.sh
scripts/connectivity/: test-kafka.py
scripts/demo/: README.md  run_demo_fix_error.sh  spark-pipeline-broken.yml
scripts/demo/transformations/: sales_pipeline_broken.py
scripts/demos/: README.md  run_demo.sh  run_demo_fix_error.sh  spark-pipeline.yml
scripts/demos/transformations/: sales_pipeline.py  sales_pipeline_imperative.py
scripts/pipelines/: pipeline_spark40.py  spark-pipeline.yml
scripts/quickstarts/: 01-basics.py  02-transformations.py  lance-quickstart.py  unity-catalog-demo.py
scripts/testdata/: __init__.py  exporter.py
scripts/tools/: download-jars.sh  download-lance-jars.sh  run-spark-test.sh
terraform/: README.md
terraform-databricks/: README.md
tests/: test_airflow_dags.py  test_airflow_setup.py  test_lance_integration.py  test_pipeline_transformations.py  test_project_structure.py  test_security.py
tests/integration/: conftest.py  test_airflow_integration.py  test_fresh_install.py  test_iceberg_crud.py  test_kafka_streaming.py  test_unity_catalog.py
(+2 files in other folders)
