[project]
name = "lakehouse-at-home"
version = "0.1.0"
description = "Fully open source, self-hostable data lakehouse with production grade technologies. Currently built on SeaweedFS, Apache Kafka, and Apache Spark. Great for testing OSS workflows and new features."
authors = [
    {name = "lisancao",email = "lisanatashacao@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark (>=4.1.0,<5.0.0)",
    "kafka-python (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.poetry.dependencies] 
[tool.black]
line-length = 88
target-version = ['py310']
include = '/.pyi?$' 
extend-exclude = '''

/(
  \.venv
  | jars
  | notebooks
)/ 
'''

[tool.ruff] 
line-length = 88
select = ['E', 'F', 'I']
ignore = ["E501"] 
exclude = [".venv", "jars", "notebooks"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] 

