[project]
name = "lakehouse-at-home"
version = "0.1.0"
description = "Fully open source, self-hostable data lakehouse with production grade technologies. Currently built on SeaweedFS, Apache Kafka, and Apache Spark. Great for testing OSS workflows and new features."
authors = [
    {name = "lisancao",email = "lisanatashacao@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark (>=4.0.0,<5.0.0)",
    "kafka-python (>=2.3.0,<3.0.0)",
    "pyarrow (>=15.0.0,<19.0.0)",
    "numpy (>=1.26.0,<3.0.0)",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.2.0",
    "testcontainers>=3.7.0",
    "psycopg2-binary>=2.9.9",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0,<26.0.0"
ruff = ">=0.9.0,<1.0.0"
pytest = ">=8.0.0,<10.0.0"
pytest-timeout = ">=2.2.0,<3.0.0"
pre-commit = ">=4.0.0,<5.0.0"

[tool.poetry.group.test.dependencies]
testcontainers = ">=3.7.0,<5.0.0"
psycopg2-binary = ">=2.9.9,<3.0.0"

[tool.black]
line-length = 88
target-version = ['py310']
include = '/.pyi?$'
extend-exclude = '''
/(
  \.venv
  | jars
  | notebooks
)/
'''

[tool.ruff]
line-length = 88
select = ['E', 'F', 'I']
ignore = ["E501"]
exclude = [".venv", "jars", "notebooks"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
markers = [
    "integration: mark test as integration test (may require Docker)",
    "slow: mark test as slow-running",
    "spark40: mark test for Spark 4.0 only",
    "spark41: mark test for Spark 4.1 only",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
